--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -113,10 +113,10 @@ disqus: false
 gitment_owner: AnonymousDQ      #你的 GitHub ID
 # 是否使用官方js(false可以提升访问速度，本地修改过一部分的js，官方js可能会出现服务器不稳定，不太建议使用)
 gitment_remote: false
-gitment_repo: 'AnonymousDQ.github.io'          #存储评论的 repo name(需要在Github创建)
+gitment_repo: 'victor.github.io'          #存储评论的 repo name(需要在Github创建)
 gitment_oauth:
-  client_id: 'cc2d3e4ac50f49da1b89'           #client ID
-  client_secret: '06ba7a05c7ed3bdded08225abcdc78fc0295485b'       #client secret
+  client_id: '5a17b0a3556d60b2a3fb'           #client ID
+  client_secret: 'be054e14b78c5f52920d1198a51c12c6a0c28ca6'       #client secret
 
 # 4、Giteement----【国内用户建议使用这个，相对比较快】
 # 关于如何集成:https://www.jianshu.com/p/f5c4633524c7
