--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -3,7 +3,7 @@ menu:
   主页: /
   技术笔记: https://anonymousdq.github.io/
   #个人简历: https://zhousiwei.gitee.io/cv/
-  大数据: /tags/BigData/
+  大数据: /tags/大数据/
   Linux: /tags/Linux
   Java: /tags/Java
   AI: /tags/AI
