--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -281,4 +281,4 @@ friends:
     url: Victor的分享论坛
 
 # 关于我
-aboutme: 主要涉及技术：<br>Java后端开发、Hadoop、Spark、微服务、TensorFlow<br>公众号开发、开源爱好者、Linux<br><br>联系QQ:1397743321<br><br>很惭愧<br><br>只做了一点微小的工作<br>谢谢大家
+aboutme: 主要涉及技术：<br>Java后端开发、Hadoop、Spark、微服务、TensorFlow<br>AI、公众号开发、开源爱好者、Linux<br>
