--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -1,9 +1,9 @@
 ﻿# Header-菜单
 menu:
-  主页: /
+  主页: https://anonymousdq.github.io/victor.github.io/
   技术笔记: https://anonymousdq.github.io/
   #个人简历: https://zhousiwei.gitee.io/cv/
-  大数据: /tags/大数据/
+  大数据: https://anonymousdq.github.io/victor.github.io/tags/大数据/
   Linux: /tags/Linux
   Java: /tags/Java
   AI: /tags/AI
