--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://anonymousdq.github.io
-root: /victor.github.io/
+url: https://anonymousdq.github.io/victor.github.io/
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
