--- a/package.json
+++ b/package.json
@@ -12,6 +12,15 @@
     "version": "4.0.0"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^7.0.1",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.2",
     "hexo": "^4.0.0",
     "hexo-asset-image": "^1.0.0",
     "hexo-deployer-git": "^2.0.0",
